crates/service/tests/code_action/snapshots/features__code_action__func_header_join__one_by_one.snap
---
source: crates/service/tests/code_action/func_header_join.rs
expression: response
---
[
  {
    "title": "Join parameters",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 10
              },
              "end": {
                "line": 2,
                "character": 33
              }
            },
            "newText": "(param i32 f64)"
          }
        ]
      }
    }
  }
]
